Remove P25 fully qualified radio alias matching